update on the seller register payload
